<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:layout_width="match_parent"

    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="@dimen/long_margin"
        android:orientation="vertical"
        android:background="@drawable/btnshape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:text="@string/startdialog_text"
        android:textColor="@color/purple"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/long_margin"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="text"
        android:id="@+id/startdialog_name"
        android:textColor="@color/dark_purple"
        android:textColorHint="@color/dark_purple"
        android:background="@color/white"
        android:padding="@dimen/short_margin"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:maxLength="10"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_marginBottom="@dimen/medium_margin"
        android:lines="1"
        android:hint="@string/entername_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/startdialog_start"
        android:textColor="@color/white"
        android:padding="@dimen/medium_margin"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/start_game"
        android:theme="@style/purpleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>